# textxtract

./: .coverage  404.html  ARCHITECTURE_PLAN.md  README.md  coverage.xml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: test.yml
api/: index.html
architecture/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  architecture.md  changelog.md  contributing.md  index.md  installation.md  testing.md  usage.md
installation/: index.html
reference/: index.html
reference/__init__/: index.html
reference/aio/: index.html
reference/aio/__init__/: index.html
reference/aio/extractor/: index.html
reference/core/: index.html
reference/core/__init__/: index.html
reference/core/base/: index.html
reference/core/config/: index.html
reference/core/exceptions/: index.html
reference/core/logging_config/: index.html
reference/core/registry/: index.html
reference/core/utils/: index.html
reference/exceptions/: index.html
reference/handlers/: index.html
reference/handlers/__init__/: index.html
reference/handlers/csv/: index.html
reference/handlers/doc/: index.html
reference/handlers/docx/: index.html
reference/handlers/html/: index.html
reference/handlers/json/: index.html
reference/handlers/md/: index.html
reference/handlers/pdf/: index.html
reference/handlers/rtf/: index.html
reference/handlers/txt/: index.html
reference/handlers/xml/: index.html
reference/sync/: index.html
scripts/: generate_docs.py
search/: search_index.json
site/api/: index.html
site/architecture/: index.html
site/changelog/: index.html
site/contributing/: index.html
site/installation/: index.html
site/reference/: index.html
site/search/: search_index.json
site/testing/: index.html
site/usage/: index.html
testing/: index.html
tests/: __init__.py  test_async.py  test_edge_cases.py
tests/files/: markdown.md  text_file.doc
textxtract/: __init__.py
textxtract/aio/: extractor.py
textxtract/core/: base.py  registry.py
textxtract/handlers/: doc.py  docx.py
textxtract/sync/: extractor.py
usage/: index.html
(+31 files in other folders)
