[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text-extractor"
version = "0.1.0"
description = "A robust, extensible Python package for synchronous and asynchronous text extraction from PDF, DOCX, DOC, TXT, ZIP, MD, RTF, HTML, and more."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.0"
]

[project.optional-dependencies]
pdf = ["pymupdf"]
docx = ["python-docx"]
doc = ["antiword"]
md = ["markdown"]
rtf = ["pyrtf-ng"]
html = ["beautifulsoup4", "lxml"]
csv = []
json = []
xml = ["lxml"]
all = [
    "pymupdf",
    "python-docx",
    "antiword",
    "markdown",
    "pyrtf-ng",
    "beautifulsoup4",
    "lxml"
]

[tool.setuptools.packages.find]
where = ["text_extractor"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "text_extractor/tests"
]
